--- a/src/01-getting-started/index.css
+++ b/src/01-getting-started/index.css
@@ -79,19 +79,38 @@ html {
 
 .btn1, .btn2 {
     
-    width: 50%;
+    width: 25%;
     display: inline-block;
     margin-right: -4px;
 }
     
 
 .btn, .btn3, .btn4 {
-    width: 25%;
+    width: 12.5%;
     display: inline-block;
     margin-right: -5px;
     
 }
 
 #input {
-    width: 100.5%
+    text-align: center;
+    width: 50%    
+}
+
+.calculator-keys{
+    
+    max-width: 50%;
+    text-align: center;
+    /* left: 50%;  */
+    position: relative;
+    margin: auto;
+}
+
+.tax {
+    line-height: 35px;
+    text-align:center;
+    border:5px #FFAC55 solid;
+    width: 50%;
+    margin:auto;
+    box-shadow: 4px 4px 5px gray;
 }
