--- a/src/02-dom/index.css
+++ b/src/02-dom/index.css
@@ -1,5 +1,57 @@
 .win {
     border:solid black;
     width: 20%;
+    text-align: center;
     
+}
+
+.bgimg-2 {
+
+    background-image: url('./image/cards.jpg');
+    min-height: 400px;
+    opacity: 0.5;
+    width: 100%;
+    height: 25%;
+}
+
+@media only screen and (max-device-width: 1600px) {
+    .bgimg-2
+ {
+        background-attachment: scroll;
+        min-height: 200px;
+        margin-top: 20px;
+
+    }
+}
+
+
+.left {
+    width: 40%; 
+    height: auto; 
+    float: left; 
+    
+}
+
+.next {
+    height:500px;
+    width: auto;
+    text-align: center;
+}
+
+.addBefore, .addAfter, .delete {
+    margin: 10px;
+}
+
+#insideLeft {
+    background-color: gray;
+}
+
+.word {
+    padding-top:10px;
+    
+}
+
+.card{
+    background-color: gray;
+    margin: 10px;
 }
