--- a/src/03-objects/index.css
+++ b/src/03-objects/index.css
@@ -1,10 +1,14 @@
 
-
+.banner{
+    background-color: lightskyblue;
+    text-align: center;
+    height: 50px;
+}
 .money {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -32,3 +36,36 @@
     width:385px;
 }
 
+.money5 {
+    background-color: rgb(89, 84, 95);
+}
+
+.left {
+    width:32%; 
+    
+    float: left;
+  
+}
+
+.right{
+    width: 65%; 
+ 
+    float: left; 
+    border-left:solid black; 
+   
+}
+
+.acc {
+    border:solid black; 
+    border-radius: 10px;
+    width: 500px;
+    margin: 10px;
+}
+
+.container {
+    width:100%; 
+    height:auto;
+     float: left; 
+    border:solid black;
+    
+}
