--- a/src/03-objects/scripts directory/index.css
+++ b/src/03-objects/scripts directory/index.css
@@ -17,3 +17,12 @@
 .int {
   margin-top: 10px;
 }
+
+.cityList {
+  border: solid black;
+  height: 100px;
+  padding: center;
+  text-align: center;
+  border-radius: 30px;
+  margin-top: 10px;
+}
