--- a/src/03-objects/scripts directory/index.css
+++ b/src/03-objects/scripts directory/index.css
@@ -1,6 +1,6 @@
 .card {
   border: solid black;
-  height: 100px;
+  height: auto;
   padding: center;
   text-align: center;
   border-radius: 30px;
@@ -25,4 +25,11 @@
   text-align: center;
   border-radius: 30px;
   margin-top: 10px;
+}
+
+.even {
+  background: red;
+}
+.odd {
+  background: yellow;
 }
