fixed option remove function

--- a/src/03-objects/scripts directory/index.css
+++ b/src/03-objects/scripts directory/index.css
@@ -28,8 +28,15 @@
 }
 
 .even {
-  background: red;
+  background: rgb(218, 216, 216);
+  height: 30px;
 }
 .odd {
-  background: yellow;
+  background: rgb(245, 245, 178);
+  height: 30px;
+}
+
+.remove {
+  position: fixed;
+  right: 50px;
 }
