--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -25,6 +25,14 @@
   height: 100px;
   width: 100px;
   animation: Icon-logo-spin infinite 20s linear;
+  filter: invert(20%) sepia(100%) saturate(50%) hue-rotate(0deg)
+    brightness(104%) contrast(100%);
+}
+
+.Icon-logo:hover {
+  filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%)
+    contrast(100%);
+  cursor: pointer;
 }
 
 @keyframes orbit {
@@ -39,4 +47,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.gameArea {
+  position: relative;
+  width: 100%;
+}
+.board {
+  position: absolute;
+  float: left;
+  width: 60%;
+  background: none;
+  left: 30px;
+  top: 80px;
+  /* margin: -400px; */
+}
+
+.box {
+  position: relative;
+  display: inline-block;
+  width: 30%;
+  padding-top: 30%;
+  background: none;
+  margin: 5px;
+}
+
+.OX {
+  position: absolute;
+  width: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
