--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -27,15 +27,18 @@
   animation: Icon-logo-spin infinite 20s linear;
   filter: invert(20%) sepia(100%) saturate(50%) hue-rotate(0deg)
     brightness(104%) contrast(100%);
+  transform: scale(1, 1);
+  transition: all 1s ease-out;
 }
 
 .Icon-logo:hover {
   filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%)
     contrast(100%);
   cursor: pointer;
+  transform: scale(1.2, 1.2);
 }
 
-@keyframes orbit {
+/* @keyframes orbit {
   to {
     stroke-dashoffset: 50px;
   }
@@ -47,7 +50,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 .gameArea {
   position: relative;
