--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -8,7 +8,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -204,8 +204,7 @@
 }
 
 .cityList {
-  border: solid black;
-  height: 100px;
+  height: auto;
   padding: center;
   text-align: center;
   border-radius: 30px;
@@ -214,14 +213,30 @@
 
 .even {
   background: rgb(218, 216, 216);
-  height: 30px;
 }
 .odd {
   background: rgb(245, 245, 178);
-  height: 30px;
+
+  margin-top: -20px;
+}
+.city {
+  margin-bottom: 5px;
+  text-align: left;
+  width: 100%;
+  height: auto;
+  font-size: 25px;
+  color: rgb(3, 56, 3);
+  height: 35px;
 }
 
 .removeCity {
   float: right;
   margin-right: 40px;
+}
+
+.marioWorld {
+  background-color: rgb(0, 225, 255);
+  height: 100px;
+  color: rgb(248, 244, 9);
+  font-style: italic;
 }
