updated react hook

--- a/react-02/src/components/App.css
+++ b/react-02/src/components/App.css
@@ -296,3 +296,16 @@
   text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000, 2px 2px 2px black;
 }
+
+.inNode {
+  border: black 1px;
+  border-style: double;
+  width: 100%;
+}
+.nodeList {
+  width: 50%;
+}
+.flag {
+  color: red;
+  font-weight: bold;
+}
