--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -293,3 +293,9 @@
   text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 #000, -1px 1px 0 #000,
     1px 1px 0 #000, 2px 2px 2px black;
 }
+
+.linkHead {
+  width: 1000px;
+  border: solid rgb(87, 20, 212);
+  background-color: cadetblue;
+}
