--- a/react-02/src/App.css
+++ b/react-02/src/App.css
@@ -262,16 +262,18 @@
 }
 
 .bg {
-  position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -999;
+  background-size: cover;
+  position: fixed;
 }
 .bg img {
+  /* top: 0;
+  left: 0;
+  margin: auto;
   min-height: 100%;
-  width: 100%;
+  min-width: 100%;
+  z-index: -999; */
 }
 
 .iconArea {
