--- a/src/python/comp250/frontend/src/App.css
+++ b/src/python/comp250/frontend/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.sign {
+  display: inline-block;
+  border-style: solid;
+  /* border-width: 5px; */
+  margin: 10px;
+  width: 400px;
+  height: 150px;
+  line-height: 35px;
+}
